# stackapi.cpp

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt
demo/src/: GetAnswers.cpp  GetComments.cpp  GetQuestions.cpp
docs/: Auth.md  Error-handling.md  General-use.md  Getting-started.md  README.md
docs/data-objects/: NullStruct.md
src/: CMakeLists.txt
src/stackapi/: StackAPI.cpp  StackAPI.hpp
src/stackapi/data/: Backoff.hpp
src/stackapi/data/json/: Deserialisers.cpp  Serialisers.cpp
src/stackapi/data/structs/: APIResponse.hpp  BadgeCount.hpp  Comment.hpp  ImportAll.hpp  NullStruct.hpp  Question.hpp  ShallowUser.hpp  Types.hpp  User.hpp
src/stackapi/data/structs/collectives/: Collective.hpp  CollectiveExternalLink.hpp  CollectiveMembership.hpp  CollectiveRecommendation.hpp
src/stackapi/data/structs/comments/: Comment.hpp
src/stackapi/data/structs/network/: RelatedSite.hpp  Site.hpp  Styling.hpp
src/stackapi/data/structs/posts/: Answer.hpp  ClosedDetails.hpp  MigrationInfo.hpp  Notice.hpp  OriginalQuestion.hpp  Post.hpp  Question.hpp
src/stackapi/data/structs/users/: BadgeCount.hpp  User.hpp
src/stackapi/data/web/: MTSession.hpp
src/stackapi/errors/: APIException.hpp
tests/: CMakeLists.txt
